tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0223/input.js
function hello() { "use strict"; function inner() { "octal directive\1"; } }
